# py-task-framework

./: .project  README.md  requirements.txt  setup.cfg
etc/nova/: api-paste.ini  nova.conf  nova.conf.sample
nova/: exception.py  manager.py  notifications.py  utils.py
nova/android/: rb_status.py  task_status.py
nova/android/agent/: __init__.py  api.py  manager.py  rpcapi.py
nova/android/api/: android_metadata.py  androids.py
nova/android/conductor/: __init__.py
nova/api/openstack/: __init__.py  auth.py  common.py  wsgi.py  xmlutil.py
nova/api/openstack/compute/: __init__.py
nova/api/openstack/compute/plugins/v3/: services.py
nova/cmd/: android_agent.py  manage.py  sample.py
nova/conductor/: __init__.py  api.py  manager.py  plugin.py  rpcapi.py
nova/consoleauth/: manager.py
nova/db/: api.py
nova/db/sqlalchemy/: api.py  models.py
nova/db/sqlalchemy/migrate_repo/versions/: 133_init.py  134_android.py
nova/objects/: __init__.py  instance.py  migration.py  utils.py
nova/openstack/common/: loopingcall.py  periodic_task.py
nova/sample/: __init__.py  api.py  manager.py  rpcapi.py
scripts/: run_android-agent.sh  run_nova_conductor.sh  run_nova_sample.sh  run_nova_service_api.sh
