[metadata]
name = nova
version = 1.0
summary = Cloud computing fabric controller
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Development Status :: 1 - Beta
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    nova

[entry_points]
console_scripts =
    nova-conductor = nova.cmd.conductor:main
    nova-sample = nova.cmd.sample:main
    nova-api-os-compute = nova.cmd.api_os_compute:main
    nova-manage = nova.cmd.manage:main

nova.api.v3.extensions =
    services = nova.api.openstack.compute.plugins.v3.services:Services
    versions = nova.api.openstack.compute.plugins.v3.versions:Versions

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = nova/locale
domain = nova

[update_catalog]
domain = nova
output_dir = nova/locale
input_file = nova/locale/nova.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nova/locale/nova.pot
